a bunch of changes
yes

--- a/weirdspin.html
+++ b/weirdspin.html
@@ -47,22 +47,35 @@
   <img src="images/weirdspin/weirdspinbag1-1.png">
 
   <h2>bag 2</h2>
-  <img src="images/weirdspin/weirdspinv2bag2.png">
-
-  <h2>bag 3</h2>
-  <p>the goal of this bag is to occupy the yellow square so the t-piece can spin into place.</p>
-  <img src="images/weirdspin/weirdspinv2bag3g.png">
-  <p>examples:</p>
-  <p></p>
+  <p>the goal of this bag is to cover the yellow squares</p>
+  <img src="images/weirdspin/weirdspinv2bag2g.png">
+  
+  <p>a more realistic goal would be to cover all these yellow squares</p>
+  <img src="images/weirdspin/weirdspinv2bag2rg.png">
+  
+  <p>some examples for the left side that you can use:</p>
   <div class="row">
-    <div class="column">
-      <img src="images/weirdspin/weirdspinv2bag3-1.png">
-    </div>
-    <div class="column">
-      <img src="images/weirdspin/weirdspinv2bag3-2.png">
-    </div>
+	<div class="column">
+		<img src="images/weirdspin/weirdspinv2bag2l1.png">
+	</div>
+	<div class="column">
+		<img src="images/weirdspin/weirdspinv2bag2l2.png">
+	</div>
   </div>
-
+  
+  <p>some examples that you can also use:</p>
+  <div class="row">
+	<div class="column">
+		<img src="images/weirdspin/weirdspinv2bag2-1.png">
+	</div>
+	<div class="column">
+		<img src="images/weirdspin/weirdspinv2bag2-2.png">
+	</div>
+	<div class="column">
+		<img src="images/weirdspin/weirdspinv2bag2-3.png">
+	</div>
+  </div>
+  
   <hr>
 
   <h2>weirdspin v2 in action</h2>
