--- a/weirdspin.html
+++ b/weirdspin.html
@@ -63,6 +63,7 @@
 	</div>
   </div>
   
+  <p>note, the grey pieces are supposed to be placed in the next bag</p>
   <p>some examples that you can also use:</p>
   <div class="row">
 	<div class="column">
