--- a/ufopener.html
+++ b/ufopener.html
@@ -49,6 +49,93 @@
   <h2>ufopener in action</h2>
   
   <img src="images/ufopener/ufopener.gif" alt="animation thingy">
+  
+  <hr>
+  
+  <h2>ufopener v2</h2>
+  <p>this version of ufopener is too high, and requires too many pieces. only do this on newbies.</p>
+  
+  <hr>
+  
+  <p>the first 2 bags are the same as in the regular ufopener</p>
+  
+  <hr>
+  
+  <h2>bag 3</h2>
+  <p>you must have these pieces on the right</p>
+  <img src="images/ufopener/ufopenerv2bag3-1.png">
+  
+  <p>you can also do this</p>
+  <img src="images/ufopener/ufopenerv2bag3-4.png">
+  
+  <p>it's rare that you'll be able to make the whole setup with a single bag</p>
+  <div class="row">
+	<div class="column">
+	  <img src="images/ufopener/ufopenerv2bag3-2.png">
+	</div>
+    <div class="column">
+	  <img src="images/ufopener/ufopenerv2bag3-3.png">
+	</div>
+  </div>
+  
+  <p>it's even more rare to be able to set it up like this</p>
+  <div class="row">
+	<div class="column">
+	  <img src="images/ufopener/ufopenerv2bag3-6.png">
+	</div>
+    <div class="column">
+	  <img src="images/ufopener/ufopenerv2bag4-8.png">
+	</div>
+  </div>
+  
+  <p>it's easier if you can do this</p>
+  <img src="images/ufopener/ufopenerv2bag3-7.png">
+  
+  <p>but if you can't do that a common way to do it is like this, usually you'll have to give up trying to build it.</p>
+  <img src="images/ufopener/ufopenerv2bag3-5.png">
+  
+  <p>remember to do this:</p>
+  <img src="images/ufopener/ufopenerv2bag4.png">
+  <p>otherwise this will happen:</p>
+  <img src="images/ufopener/ufopenerv2bag4-a1.gif">
+  
+  <h2>bag 4</h2>
+  <p>aim to occupy the yellow squares</p>
+  <img src="images/ufopener/ufopenerv2bag4g.png">
+  
+  <p>there are many ways to do it</p>
+  <div class="row">
+	<div class="column">
+		<img src="images/ufopener/ufopenerv2bag4-5.png">
+	</div>
+    <div class="column">
+		<img src="images/ufopener/ufopenerv2bag4-6.png">
+	</div>
+	<div class="column">
+		<img src="images/ufopener/ufopenerv2bag4-7.png">
+	</div>
+  </div>
+  
+  <p>some situations that you might need to use</p>
+  <div class="row">
+	<div class="column">
+		<img src="images/ufopener/ufopenerv2bag4-3.png">
+	</div>
+    <div class="column">
+		<img src="images/ufopener/ufopenerv2bag4-4.png">
+	</div>
+	<div class="column">
+		<img src="images/ufopener/ufopenerv2bag4-7.png">
+	</div>
+  </div>
+  
+  <hr>
+  
+  <h2>ufopener v2 in action</h2>
+  <img src="images/ufopener/ufopenerv2.gif">
+  
+  
+  
 </body>
 
 </html>
