--- a/fourlolripoff/ufopener.html
+++ b/fourlolripoff/ufopener.html
@@ -34,8 +34,9 @@
 
   <h2>bag 3</h2>
   <p>The goal of bag 3 is to block the yellow squares so the player can preform the 180 spins.</p>
-  <img src="images/ufopener/ufopenerbag3g.png"
-  <p></p>
+  <img src="images/ufopener/ufopenerbag3g.png">
+  <br>
+  
   <p>Examples:</p>
   
   <div class="row">
@@ -98,6 +99,41 @@
   <img src="images/ufopener/ufopenerv2bag4.png">
   <p>otherwise this will happen:</p>
   <img src="images/ufopener/ufopenerv2bag4-a1.gif">
+  
+  <h2>bag 4</h2>
+  <p>aim to occupy the yellow squares</p>
+  <img src="images/ufopener/ufopenerv2bag4g.png">
+  
+  <p>there are many ways to do it</p>
+  <div class="row">
+	<div class="column">
+		<img src="images/ufopener/ufopenerv2bag4-5.png">
+	</div>
+    <div class="column">
+		<img src="images/ufopener/ufopenerv2bag4-6.png">
+	</div>
+	<div class="column">
+		<img src="images/ufopener/ufopenerv2bag4-7.png">
+	</div>
+  </div>
+  
+  <p>some situations that you might need to use</p>
+  <div class="row">
+	<div class="column">
+		<img src="images/ufopener/ufopenerv2bag4-3.png">
+	</div>
+    <div class="column">
+		<img src="images/ufopener/ufopenerv2bag4-4.png">
+	</div>
+	<div class="column">
+		<img src="images/ufopener/ufopenerv2bag4-7.png">
+	</div>
+  </div>
+  
+  <hr>
+  
+  <h2>ufopener v2 in action</h2>
+  <img src="images/ufopener/ufopenerv2.gif">
   
   
   
