--- a/fourlolripoff/weirdspin.html
+++ b/fourlolripoff/weirdspin.html
@@ -42,6 +42,7 @@
   <p>Alternate version of the weirdspin, also invented by <a href="https://ch.tetr.io/u/weirdboi12408"><i>WeirdBoi12408</i></a>, which adds an extra TSS. Purely for fun, as it's almost useless.</p>
   
   <hr>
+  
   <h2>bag 1</h2>
   <p>same first bag as the regular weirdspin</p>
   <img src="images/weirdspin/weirdspinbag1-1.png">
@@ -63,6 +64,7 @@
 	</div>
   </div>
   
+  <p>note, the grey pieces are supposed to be placed in the next bag</p>
   <p>some examples that you can also use:</p>
   <div class="row">
 	<div class="column">
