--- a/fourlolripoff/weirdspin.html
+++ b/fourlolripoff/weirdspin.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>weirdspin</title>
@@ -15,6 +16,7 @@
   
   <h1>weirdspin</h1>
   <h2>TSS-TST</h2>
+  <h3>created 2/12/2022</h3>
   
   <img src="images/weirdspin/weirdspin.png" alt="board thingy">
 
