--- a/fourlolripoff/ufopener.html
+++ b/fourlolripoff/ufopener.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>ufopener</title>
