--- a/fourlolripoff/ufopener.html
+++ b/fourlolripoff/ufopener.html
@@ -136,7 +136,32 @@
   <h2>ufopener v2 in action</h2>
   <img src="images/ufopener/ufopenerv2.gif">
   
+  <hr>
   
+  <h2>weirdspin extension</h2>
+  
+  <p>This extension was discovered by ufo dude, but elaborated on by WeirdBoi.</p>
+  
+  <p>The first two bags are the same.</p>
+  
+  <h2>bag 3</h2>
+  
+  <p>Note that you don't have to fill the sides explicitly like so, filling in the left side and covering the right works fine.</p>
+  
+  <img src="images/ufopener/ufopener-bag3-1w.png">
+  <img src="images/ufopener/ufopener-bag3-2w.png">
+  
+  <h2>bag 4</h2>
+  
+  <p>Also note that bag 3 may not match up exactly. The only requirement is that you place the S piece like so.</p>
+  <img src="images/ufopener/ufopener-bag4-1w.png">
+  <img src="images/ufopener/ufopener-bag4-2w.png">
+  
+  <hr>
+  
+  <h2>ufopener + weirdspin extension in action</h2>
+  
+  <img src="images/ufopener/ufopenerw.gif">
   
 </body>
 
