removed dot cannon

--- a/fourlolripoff/five.lmao/index.html
+++ b/fourlolripoff/five.lmao/index.html
@@ -16,7 +16,7 @@
 
   <div class="row">
     
-    <div class="column"><a href="weirdspin.html">
+    <div class="column"><a href="skim.html">
 
       <h2>skimming</h2>
       <img src="images/skimming/display" alt="skimming">
