--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
   
   <h2>about me</h2>
   <h3>nobody's going to read this anyways</h3>
-  <p>&emsp;I am a programmer from America who enjoys playing Tetris and osu!. I know how to program in Python, HTML, and CSS. I will be learning C# or JavaScript soon. In tetr.io, I am an S rank and have a sub 50 sprint score.
-  <p>&emsp;I am a proficient player at Tetris. I'm planning to reach U rank sometime.</p>
+  <p>sucks at tetris (SS RANK)</p>
+  <p>man i know you came here just for fourlolripoff now just go there</p>
   
   <hr>
   
