add textgen to homepage

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <h2>about WeirdBoi12408</h2>
   
   <hr>
-  <h2 style="font-size:40px">common pages</h2>
+  <h2 style="font-size:40px">cool stuff</h2>
   <ul style="font-size:30px;"><b>
   
 	<li><a href="fourlolripoff/index.html" style="color:#BBFFDD;">fourlolripoff</a></li>
@@ -39,6 +39,7 @@
   <ul style="font-size:24px;"><b>
   
 	<li><a href="fourlolripoff/index.html" style="color:#BBFFDD;">fourlolripoff</a></li>
+	<li><a href="textgen/index.html" style="color:#BBFFDD;">textgen</a></li>
   
   </b></ul>
   
