--- a/fourlolripoff/e.html
+++ b/fourlolripoff/e.html
@@ -21,7 +21,8 @@
 
   <hr>
   <h2>about opener</h2>
-  <p>This opener invented by <a href="https://ch.tetr.io/u/weirdboi12408"><i>WeirdBoi12408</i></a> is another troll opener</p>
+  <p>This opener invented by <a href="https://ch.tetr.io/u/weirdboi12408"><i>WeirdBoi12408</i></a> is another troll opener.</p>
+  <p>Note that you can have the I pieces to the right instead of the left. It doeesn't matter where it is but now that I look at it I realize that having it on the right side is better because the I pieces are required for the 180 spin unless you put it on the right side. It's also easier to stack but that's not the main reason.</p>
   <hr>
   <h2>bag 1</h2>
   
