--- a/fourlolripoff/index.html
+++ b/fourlolripoff/index.html
@@ -55,6 +55,14 @@
       <p>TST - TSS troll opener</p>
     
     </a></div>
+	
+	<div class="column"><a href="f.html">
+	
+	  <h2>f opener</h2>
+	  <img src="images/f/fcolored.png" alt="board thingy">
+	  <p> sequel to the e opener, also a TST - TSS troll </p>
+	
+	</a></div>
     
   </div>
   
