--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>four.lol ripoff</title>
+  <title>ayo</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
   <link rel="stylesheet" href="style.css">
 </head>
@@ -47,7 +47,7 @@
   
   <h2>about me</h2>
   <h3>nobody's going to read this anyways</h3>
-  <p>sucks at tetris (SS RANK)</p>
+  <p>sucks at tetris (U RANK)</p>
   <p>man i know you came here just for fourlolripoff now just go there</p>
   
   <hr>
