--- a/fourlolripoff/f.html
+++ b/fourlolripoff/f.html
@@ -5,7 +5,7 @@
   <link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>[insert title]</title>
+  <title>f opener</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
   <link rel="stylesheet" href="style.css">
 </head>
