--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <h2 style="font-size:30px">socials</h2>
   <ul style="font-size:24px;"><b>
   
-	<li><a href="https://ch.tetr.io/u/weirdboi12408">tetr.io</a></li>
+	<li><a href="https://ch.tetr.io/u/weirdboi">tetr.io</a></li>
 	<li><a href="https://www.youtube.com/channel/UCAp6-BjO3kZ3IoSZuxE6NXA">youtube</a></li>
 	<li><a href="https://jstris.jezevec10.com/u/WeirdBoi12408">jstris</a></li>
   
