--- a/fourlolripoff/index.html
+++ b/fourlolripoff/index.html
@@ -48,7 +48,7 @@
     
     </a></div>
 	
-	<div class="column"><a href="e.html">
+	<div class="column" style="display:none;"><a href="e.html">
 
       <h2>e opener</h2>
       <img src="images/e/ecolored.png" alt="e">
@@ -56,7 +56,7 @@
     
     </a></div>
 	
-	<div class="column"><a href="f.html">
+	<div class="column" style="display:none;"><a href="f.html">
 	
 	  <h2>f opener</h2>
 	  <img src="images/f/fcolored.png" alt="board thingy">
