--- a/fourlolripoff/weirdspin.html
+++ b/fourlolripoff/weirdspin.html
@@ -22,7 +22,7 @@
 
   <hr>
   <h2>about opener</h2>
-  <p>This opener invented by <a href="https://ch.tetr.io/u/weirdboi12408"><i>WeirdBoi12408</i></a> is an opener that is used for fun. The opener doesn't suck too badly, but it can only be used on <a href="https://tetr.io"><i>tetr.io</i></a>, as it has a 180 kick.</p>
+  <p>This opener invented by <a href="https://ch.tetr.io/u/weirdboi"><i>WeirdBoi</i></a> is an opener that is used for fun. The opener doesn't suck too badly, but it can only be used on <a href="https://tetr.io"><i>tetr.io</i></a>, as it has a 180 kick.</p>
   <hr>
   
   <h2>bag 1</h2>
