--- a/fourlolripoff/sdpc.html
+++ b/fourlolripoff/sdpc.html
@@ -21,7 +21,7 @@
 
   <hr>
   <h2>about opener</h2>
-  <p>This extension invented by <a href="https://ch.tetr.io/u/weirdboi12408"><i>WeirdBoi12408</i></a> is an extension to the ufopener or weirdspin.</p>
+  <p>This extension invented by <a href="https://ch.tetr.io/u/weirdboi"><i>WeirdBoi</i></a> is an extension to the ufopener or weirdspin.</p>
   <hr>
   <h2>bag 1</h2>
   
