--- a/fourlolripoff/index.html
+++ b/fourlolripoff/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <p style="font-size:12px"><a href="../index.html">back to about me</a></p>
+  <p style="font-size: 12px; display: none"><a href="../index.html">back to about me</a></p>
   <h1>four.lol ripoff site</h1>
   <h2>created by <a href="https://ch.tetr.io/u/weirdboi">WeirdBoi</a></h2>
   <hr>
